--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     
-    <title>Article Summarizer</title>
+    <title>SummarAIse | Article Summariser AI</title>
   </head>
   <body>
     <div id="root"></div>
